# node-gui-x

./: .gitignore  README.md
.github/workflows/: build.yml  static_check.yml
build-tools/rust-version-extractor/: rust-version-extractor.py
src-tauri/: Cargo.toml  build.rs  deny.toml  do_checks.sh  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  request.rs
