[package]
name = "node-gui-x"
description = "Mintlayer Node GUI X"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/node-gui-x"
readme = "README.md"
license = "MIT"
version = "1.0.0"
authors = []
edition = "2021"
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mintlayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
parity-scale-codec = "3.1"
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "1.27", default-features = false }

tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-process = "2.2"


chainstate = {git = "https://github.com/mintlayer/mintlayer-core", package = "chainstate",  rev="2ea4a5c"}
common = { git = "https://github.com/mintlayer/mintlayer-core", package = "common",  rev="2ea4a5c" }
node-gui-backend = { git = "https://github.com/mintlayer/mintlayer-core", package = "node-gui-backend",  rev="2ea4a5c"}
wallet = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet",  rev="2ea4a5c" }
wallet-controller = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-controller",  rev="2ea4a5c" }
wallet-types = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-types",  rev="2ea4a5c" }
wallet-rpc-lib = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-rpc-lib",  rev="2ea4a5c"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
overflow-checks = true

# "Release" profile with debug info enabled.
[profile.release-with-debug-info]
inherits = "release"
debug = true

# "Release" profile with debug info and debug assertions enabled.
[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
